# gnome-calendar

src/: meson.build
src/core/: gcal-context.c  gcal-context.h
src/gui/: gcal-application.c  gcal-window.c  gui.gresource.xml  meson.build
src/gui/views/: gcal-month-cell.c  gcal-month-cell.h  gcal-month-popover.ui  gcal-month-view.c  gcal-month-view.h  gcal-week-header.c  gcal-week-header.h  gcal-year-view.c
src/utils/: gcal-utils.h
